# lewdware

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  config.schema.json  dist-workspace.toml  fragment.wxs  install_linux.sh  macos_build.sh  packager.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  test.yml
__OLD-config/: Cargo.toml
__OLD-config/assets/: main.css
__OLD-pack-editor/: Cargo.toml
config/: Cargo.toml  Dioxus.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.css
config-tauri/: package.json  pnpm-lock.yaml
config-tauri-old/: pnpm-lock.yaml
config-tauri/src/: app.css  app.html  extra.ts
config-tauri/src-tauri/: Cargo.toml
config-tauri/src-tauri/src/: lib.rs
config-tauri/src/lib/: General.svelte  PackMode.svelte  api.ts  types.ts
config-tauri/src/routes/: +layout.svelte
config/assets/: tailwind.css
config/src/: app.css  audio.ts  error.ts  general.rs  general.ts  main.rs  main.ts  modes.rs  pack.rs  pack_mode.rs  popups.ts  state.ts  styles.css
config/src-tauri/: Cargo.toml  tauri.conf.json
config/src-tauri/capabilities/: default.json
config/src-tauri/icons/: icon.icns
config/src-tauri/src/: lib.rs  main.rs
config/src/components/header/: index.ts
config/src/components/slider/: index.html
config/src/lib/: General.svelte  PackMode.svelte  UpdateBanner.svelte  api.ts  store.svelte.ts  types.ts
config/src/routes/: +layout.svelte  +page.svelte
default-modes/: .luarc.json  config.jsonc
default-modes/src/: main.lua
deploy/linux/: build_installer_a.sh  build_installer_b.sh  download_ffmpeg_sidecars.sh
deploy/macos/: build_installer_a.sh  build_installer_b.sh  download_ffmpeg_sidecars.sh
deploy/windows/: build_installer_a.ps1  build_installer_b.ps1  download_ffmpeg_sidecars.ps1  installer_a.iss
docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/components/: DownloadSection.astro
docs/src/data/: config.schema.json  latest.json  pack-editor-latest.json
docs/src/lib/: parse-luacats.ts
docs/src/styles/: custom.css
lewdware/: Cargo.toml  README.md  build.rs
lewdware/src/: app.rs  app_switcher.rs  audio.rs  buffer.rs  config.rs  d3d12_import.rs  drm_import.rs  egui.rs  error.rs  header.rs  main.rs  media.rs  monitor.rs  nv12_shader.wgsl  shader.wgsl  text_font.rs  transition.rs  utils.rs  video.rs  video_shader.wgsl  vtb_import.rs  wgpu.rs  window.rs
lewdware/src/config/: app.rs  file.rs  mod.rs
lewdware/src/lua/: api.rs  audio.rs  interval.rs  media.rs  mod.rs  mode.rs  request.rs  window.rs
lewdware/src/media/: bounded_input.rs  dev_pack.rs  dir.rs  manager.rs  mod.rs  pack.rs  process.rs  types.rs
lewdware/src/shaders/: nv12.wgsl  rgba.wgsl  yuv.wgsl
lewdware/src/window/: gpu_renderer.rs  header.rs  inner_window.rs  mod.rs  opts.rs  pool.rs  surface.rs  video_renderer.rs  window_type.rs
lewdware/src/zero_copy/: linux.rs  macos.rs  mod.rs  windows.rs
lw/: Cargo.toml  README.md
lw/src/: main.rs  update.rs
lw/src/mode/: build.rs  config.rs  dev.rs  mod.rs  new.rs  types.rs
my-mode/: .luarc.json  config.jsonc
my-mode/.types/: lewdware.lua
my-mode/src/: main.lua  shared.lua
pack-editor/: Dioxus.toml  README.md  package.json  pnpm-lock.yaml
pack-editor-old-dioxus/: Cargo.toml
pack-editor-old-dioxus/src/: image_list.rs
pack-editor-tauri/: package.json
pack-editor-tauri/src/: app.html
pack-editor-tauri/src-tauri/: Cargo.toml  tauri.conf.json
pack-editor-tauri/src-tauri/capabilities/: default.json
pack-editor-tauri/src-tauri/src/: encode.rs  lib.rs  media_server.rs  thumbnail.rs
pack-editor-tauri/src/lib/: Editor.svelte  MediaGrid.svelte  MediaViewer.svelte  Sidebar.svelte  UploadProgress.svelte  app.css  store.svelte.ts  types.ts
pack-editor-tauri/src/routes/: +layout.svelte  +page.svelte
pack-editor/assets/: tailwind.css
pack-editor/src/: editor.rs  encode.rs  image_list.rs  main.rs  options.rs  pack.rs  thumbnail.rs  upload_files.rs
pack-editor/src-tauri/: Cargo.toml  tauri.conf.json
pack-editor/src-tauri/capabilities/: default.json
pack-editor/src-tauri/icons/: icon.icns
pack-editor/src-tauri/src/: encode.rs  lib.rs  main.rs  media_server.rs  pack.rs  thumbnail.rs
pack-editor/src/lib/: Dialog.svelte  Editor.svelte  MediaGrid.svelte  MediaViewer.svelte  Options.svelte  Sidebar.svelte  Start.svelte  UpdateBanner.svelte  UploadProgress.svelte  api.ts  app.css  store.svelte.ts  types.ts
pack-editor/src/routes/: +layout.svelte  +page.svelte
pack-format/: Cargo.toml
pack-format/src/: config.rs  lib.rs  read.rs  target.rs  utils.rs
pack-maker/: index.html  package.json  pnpm-lock.yaml
pack-maker-dioxus/: Cargo.toml  Dioxus.toml
pack-maker-dioxus/assets/: main.css  tailwind.css
pack-maker-dioxus/src/: encode.rs  image_list.rs  main.rs  media_server.rs  menu.rs  options.rs  pack.rs  thumbnail.rs  utils.rs
pack-maker-dioxus/src/components/: mod.rs
pack-maker/src/: editor.ts  main.ts  menu.ts  progress.ts  styles.css  types.ts
pack-maker/src-tauri/: Cargo.toml  tauri.conf.json
pack-maker/src-tauri/capabilities/: default.json
pack-maker/src-tauri/src/: lib.rs  main.rs  media_protocol.rs  monitor_plugin.rs  pack.rs  thumbnail.rs  upload.rs
pack-maker/src/components/: asset.html  asset.ts  progress-bar.html  progress-bar.ts  progress-error.html  progress-error.ts  virtualized-grid.html  virtualized-grid.ts
packer/: Cargo.toml
packer/src/: config.rs  db.rs  encode.rs  main.rs
scripts/: build-ffmpeg.sh  build_dav1d.sh  build_ffmpeg_minimal.sh
shared/: Cargo.toml
shared/src/: db.rs  encode.rs  lib.rs  logging.rs  once.rs  pack_config.rs  read_config.rs  read_pack.rs  target.rs  user_config.rs  utils.rs
shared/src/components/: menu.rs  mod.rs
shared/src/components/dialog/: style.css
shared/src/components/input/: component.rs
shared/src/lua/: api.lua
shared/src/migrations/: 0001_init_schema.sql
shared/src/mode/: header.rs  metadata.rs  mod.rs  read.rs
src/: app.rs  audio.rs  buffer.rs  config.rs  egui.rs  main.rs  media.rs  video.rs  window.rs
(+20 files in other folders)
