[workspace]
members = [
    "lewdware",
    "lewdware-mode",
    "pack-maker-dioxus",
    "shared",
]
resolver = "3"

[patch.crates-io]
pixels = { git = "https://github.com/restoredelight/pixels", branch = "with-instance" }
dioxus = { git = "https://github.com/restoredelight/dioxus", branch = "stop-close-requested" }
dioxus-desktop = { git = "https://github.com/restoredelight/dioxus", branch = "stop-close-requested" }
