[package]
name = "config"
version = "0.1.0"
authors = ["restoredelight <restoreddelight@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.3", features = [] }
dioxus-heroicons = "0.4.1"
dioxus-stores = "0.7.3"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.32.0", features = ["bundled"] }
rusqlite = { version = "0.38.0", features = ["bundled", "fallible_uint"] }
shared = { version = "0.1.0", path = "../shared" }
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["io-util"] }
tokio-stream = "0.1.18"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
indexmap = "2.13.0"
dtoa = "1.0.11"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
