[package]
name = "lewdware"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared/" }
anyhow = "1.0.99"
egui = { version = "0.33.3", features = ["serde"] }
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
ffmpeg-next = "8.0.0"
image = { version = "0.25.6", default-features = false, features = ["avif-native"] }
wgpu = { version = "27.0.1", features = ["static-dxc"] }
notify-rust = "4.11.7"
pixels = "0.15.0"
rand = "0.9.2"
rdev = "0.5.3"
rodio = "0.21.1"
rusqlite = { version = "0.38.0", features = ["bundled", "fallible_uint"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
softbuffer = "0.4.6"
tempfile = "3.21.0"
webbrowser = { version = "1.0.5", features = ["hardened"] }
winit = "0.30.12"
ab_glyph = "0.2.32"
wallpaper = "3.2.0"
dirs = "6.0.0"
rand_distr = "0.5.1"
walkdir = "2.5.0"
tokio = { version = "1.48.0", features = ["full"] }
pollster = "0.4.0"
mlua = { version = "0.11.5", features = ["luau", "async", "anyhow", "serde", "userdata-wrappers"] }
egui_software_backend = { git = "https://github.com/DGriffin91/egui_software_backend.git", features = ["rayon"] }
bytemuck = "1.24.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rayon = "1.11.0"
tiny-skia = "0.11.4"
url = "2.5.8"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.21.2"

[features]
static-ffmpeg = ["ffmpeg-next/static"]
build-ffmpeg = ["ffmpeg-next/build"]
