[package]
name = "lewdware"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared/" }
anyhow = "1.0.99"
egui = { version = "0.34.2", features = ["serde"] }
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
ffmpeg-next = "8.1.0"
image = { version = "0.25.6", default-features = false, features = ["avif-native"] }
wgpu = { version = "29.0.3", features = ["static-dxc"] }
notify-rust = "4.11.7"
rand = "0.10.0"
rdev = "0.5.3"
rodio = "0.22.2"
rusqlite = { version = "0.39.0", features = ["bundled", "fallible_uint"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
softbuffer = "0.4.6"
tempfile = "3.21.0"
webbrowser = { version = "1.0.5", features = ["hardened"] }
winit = "0.30.12"
libc = "0.2"
ab_glyph = "0.2.32"
wallpaper = "3.2.0"
dirs = "6.0.0"
walkdir = "2.5.0"
tokio = { version = "1.48.0", features = ["full"] }
pollster = "0.4.0"
mlua = { version = "0.11.5", features = ["luau", "async", "anyhow", "serde", "userdata-wrappers"] }
egui_software_backend = { git = "https://github.com/DGriffin91/egui_software_backend.git", features = ["rayon"] }
bytemuck = "1.24.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.34.0"
rayon = "1.11.0"
tiny-skia = "0.12.0"
url = "2.5.8"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.24.0"

[features]
static-ffmpeg = ["ffmpeg-next/static"]
build-ffmpeg = ["ffmpeg-next/build"]
