[package]
name = "lewdware"
version.workspace = true
edition = "2024"

[dependencies]
shared = { path = "../shared/", features = ["mlua"] }
anyhow = "1.0.99"
egui = { version = "0.34.2", features = ["serde"] }
egui-wgpu = "0.34.2"
egui-winit = "0.34.2"
ffmpeg-next = "8.1.0"
image = { version = "0.25.6", default-features = false, features = ["avif-native"] }
wgpu = { version = "29.0.3", features = ["static-dxc"] }
notify-rust = "4.11.7"
rand = "0.10.0"
rdev = "0.5.3"
rodio = "0.22.2"
rusqlite = { version = "0.39.0", features = ["bundled", "fallible_uint"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
softbuffer = "0.4.6"
tempfile = "3.21.0"
webbrowser = { version = "1.0.5", features = ["hardened"] }
winit = "0.30.12"
libc = "0.2"
ab_glyph = "0.2.32"
wallpaper = "3.2.0"
dirs = "6.0.0"
walkdir = "2.5.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
pollster = "0.4.0"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "async", "anyhow", "serde", "userdata-wrappers"] }
egui_software_backend = { git = "https://github.com/DGriffin91/egui_software_backend.git", features = ["rayon"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.34.0"
rayon = "1.11.0"
tiny-skia = "0.12.0"
url = "2.5.8"

[target.'cfg(target_vendor = "apple")'.dependencies]
core-foundation = "0.10.1"
objc2 = "0.6.3"
objc2-metal = { version = "0.3.2", features = ["MTLDevice", "MTLTexture", "MTLResource", "MTLPixelFormat"] }
objc2-io-surface = { version = "0.3.2", features = ["IOSurfaceRef", "objc2"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
ash = "0.38"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common", "Win32_System_Threading"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.24.0"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.4"

[features]
static-ffmpeg = ["ffmpeg-next/static"]
build-ffmpeg = ["ffmpeg-next/build"]
