[package]
name = "lw"
version.workspace = true
edition = "2024"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["signal"] }

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
indexmap = { version = "2.13.0", features = ["serde"] }
json5 = "1.3.1"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
shared = { version = "0.1.0", path = "../shared" }
walkdir = "2.5.0"
which = "8.0.0"
zstd = "0.13.3"
ureq = { version = "3.3.0", features = ["json"] }

[dev-dependencies]
tempfile = "3.27.0"
