[package]
name = "pack-editor"
version = "0.1.0"
authors = ["restoredelight <restoreddelight@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
dioxus = { version = "0.7.3", features = ["router"] }
dioxus-desktop = "0.7.3"
dioxus-heroicons = "0.4.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-stores = "0.7.3"
dirs = "6.0.0"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
image = { version = "0.25.9", features = ["avif-native"] }
infer = "0.19.0"
itertools = "0.14.0"
mime = "0.3.17"
mime_guess = "2.0.5"
pollster = "0.4.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rayon = "1.11.0"
rfd = "0.17.2"
rusqlite = { version = "0.38.0", features = ["fallible_uint", "bundled"] }
serde = "1.0.228"
serde_json = "1.0.149"
shared = { version = "0.1.0", path = "../shared" }
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["net", "process"] }
uuid = "1.19.0"
walkdir = "2.5.0"
webp = "0.3.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
