[package]
name = "packer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
byteorder = "1.5.0"
clap = { version = "4.5.46", features = ["derive"] }
indicatif = "0.18.0"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tempfile = "3.21.0"
walkdir = "2.5.0"
