[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ciborium = "0.2.2"
dirs = "6.0.0"
glob = "0.3.3"
itertools = "0.14.0"
json5 = "0.4.1"
merge = "0.2.0"
serde = "1.0.219"
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["fs", "io-std", "io-util"] }
walkdir = "2.5.0"
