[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ciborium = "0.2.2"
dioxus = "0.7.3"
dioxus-heroicons = "0.4.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
dioxus-stores = "0.7.3"
dirs = "6.0.0"
glob = "0.3.3"
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = "0.14.0"
json5 = "1.3.1"
merge = "0.2.0"
mlua = { version = "0.11.5", features = ["luau"] }
rusqlite = { version = "0.38.0", features = ["fallible_uint"] }
serde = "1.0.219"
serde_json = "1.0.145"
serde_with = "3.16.1"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["fs", "io-std", "io-util", "rt"] }
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
zstd = "0.13.3"
