[package]
name = "shared"
version.workspace = true
edition = "2024"

[features]
mlua = ["dep:mlua"]

[dependencies]
anyhow = "1.0.100"
ciborium = "0.2.2"
dirs = "6.0.0"
glob = "0.3.3"
indexmap = { version = "2.13.0", features = ["serde"] }
itertools = "0.14.0"
json5 = "1.3.1"
merge = "0.2.0"
mlua = { version = "0.11.6", optional = true }
rusqlite = { version = "0.39.0", features = ["bundled", "fallible_uint"] }
serde = "1.0.219"
serde_json = "1.0.145"
serde_with = "3.16.1"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["fs", "io-std", "io-util", "rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
zstd = "0.13.3"
