[package]
name = "config-tauri"
version = "0.1.0"
description = "Lewdware Config App"
authors = ["restoredelight"]
edition = "2021"

[lib]
name = "config_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../../shared" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.32", features = ["bundled"] }
rusqlite = { version = "0.38", features = ["bundled", "fallible_uint"] }
tempfile = "3"
