[package]
name = "lewdware-pack-editor"
version.workspace = true
description = "Lewdware Pack Editor"
authors = ["restoredelight <restoreddelight@proton.me>"]
edition = "2021"

[lib]
name = "pack_editor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../../shared" }
anyhow = "1"
axum = "0.8"
blake3 = "1.8"
dirs = "6"
futures = "0.3"
infer = "0.19"
mime_guess = "2"
r2d2 = "0.8"
r2d2_sqlite = { version = "0.34.0", features = ["bundled"] }
rayon = "1"
rusqlite = { version = "0.39.0", features = ["bundled", "fallible_uint"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

