[package]
name = "pack-maker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pack_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "wry"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rusqlite = "0.37.0"
tempfile = "3.23.0"
shared = { path = "../../shared" }
anyhow = "1.0.100"
tokio = "1.47.1"
rayon = "1.11.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
walkdir = "2.5.0"
tauri-plugin-shell = "2"
tao = "0.34.5"
tauri-runtime-wry = "2.9.1"
tauri-runtime = "2.9.1"
