[package]
name = "pack-maker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pack_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "wry"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.38.0", features = ["bundled", "fallible_uint"] }
tempfile = "3.23.0"
shared = { path = "../../shared" }
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["net"] }
rayon = "1.11.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
walkdir = "2.5.0"
tauri-plugin-shell = "2"
tao = "0.34.5"
tauri-runtime-wry = "2.9.1"
tauri-runtime = "2.9.1"
uuid = { version = "1.18.1", features = ["v4"] }
blake3 = "1.8.2"
hyper = { version = "1.7.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
http-body-util = "0.1.3"
mime_guess = "2.0.5"
infer = "0.19.0"
bounded_join_set = "0.3.0"
futures = "0.3.31"
